--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^11.3.19",
+    "gh-pages": "^6.1.1",
     "next": "14.2.5",
     "next-intl": "^3.17.2",
     "react": "^18",
