--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,11 +76,9 @@ jobs:
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: page
-          path: build
-          if-no-files-found: error
+          path: ./out
 
   # Deployment job
   deploy:
