--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.13.0"
+    "react-intersection-observer": "^9.13.0",
+    "vercel": "^35.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
