--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@next/third-parties": "^14.2.5",
     "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^11.3.19",
     "gh-pages": "^6.1.1",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-intl": "^3.17.2",
     "react": "^18",
     "react-dom": "^18",
